# gbd

./: .gitattributes  .gitignore  .gitlab-ci.yml  CITATION.cff  Dockerfile  Dockerfile.txt  LICENSE  MANIFEST.in  README.md  all-documents.html  apidocs-help.html  bench_meta.csv  classIndex.html  cli.py  db.py  default_config.toml  demo.ipynb  docker-compose.yml  entrypoint.sh  fullsearchindex.json  gbd.py  gbd_api.py  gbd_core.api.GBD.html  gbd_core.api.GBDException.html  gbd_core.api.html  gbd_core.config.GbdConfig.html  gbd_core.config.html  gbd_core.contexts.html  gbd_core.database.Database.html  gbd_core.database.DatabaseException.html  gbd_core.database.html  gbd_core.grammar.Parser.html  gbd_core.grammar.ParserException.html  gbd_core.grammar.html  gbd_core.html  gbd_core.query.GBDQuery.html  gbd_core.query.html  gbd_core.schema.FeatureInfo.html  gbd_core.schema.Schema.html  gbd_core.schema.SchemaException.html  (+43 more)
configs/: aliases  nginx_proxy.conf
data/: agile.db  ana.py  bwcloud.ticket.txt  calc.ebnf  classifier-header.txt  ideas  index.html  main2017.db  presentation.db  raid.db  resolved  resolved2  resolved3  urls
doc/: main.tex
docker/: Dockerfile.gbd  Dockerfile.nginx  build.sh  docker-compose.yml  entrypoint.nginx.sh
gbd/: api.py  database.py  db.py  query_builder.py  schema.py  util_argparse.py
gbd_apps/: _eval_comb_sat.py  classification.py  eval.py  eval_comb.py  eval_comb_ilp.py  graph.py  plot.py
gbd_core/: api.py  config.py  contexts.py  database.py  default_config.toml  grammar.py  query.py  query_builder.py  schema.py  util.py  util_argparse.py
gbd_init/: benchmark_transformers.py  cnf_extractors.py  cnf_transformers.py  external.py  feature_extractors.py  gbdhash.py  initializer.py  instance_transformers.py
gbd_server/: gbd-server-log  rendering.py  server.py  util.py
gbd_tool/: algo.py  benchmark_administration.py  bootstrap.py  classification.py  config.py  config_manager.py  contexts.py  db.py  error.py  eval.py  eval_comb.py  eval_comb_ilp.py  eval_comb_sat.py  gbd_api.py  gbd_hash.py  graph.py  groups.py  import_data.py  init.py  plot.py  query_builder.py  sanitize.py  schema.py  search.py  util.py  util_argparse.py
gbd_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
main/: LICENSE  MANIFEST.in  README.md  gbd.py  groups.py  htmlGenerator.py  import_data.py  setup.py  tags.py  update_tool.sh  util.py  zipper.py
presentation/: KIT16.clo  KIT18.clo  KIT20.clo  KIT22.clo  KIT24.clo  KITbrief.cls  KITcolors.sty  KITdefs.sty  beamercolorthemeKIT.sty  beamerthemeKIT.sty  slides.tex
server/: __init__.py  env.py  htmlGenerator.py  interface.py  rendering.py  run_server.sh  server.py  util.py
templates/: home.html  main.css  query_form.html  resolve_form.html  start.html  test.html
tests/: integration_test.sh  penetrationtest.py  run.sh  test_api.py  test_db.py  test_db_nonunique_features.py  test_db_unique_features.py  test_gbd_hash.py  test_gbd_hash_sorted.py  test_gbdhash.py  test_init.py  (+5 more)
(+119 files in other folders)
