[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gbd_tools"
version = "5.2.0"
description = "GBD Tools: Maintenance and Distribution of Benchmark Instances and their Attributes"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.6"
authors = [{ name = "Ashlin Iser", email = "ashlin.iser@gmail.com" }]
urls = { Homepage = "https://github.com/Udopia/gbd" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["flask", "tatsu", "polars", "waitress", "pebble", "tomli; python_version < '3.11'"]
scripts = { gbd = "gbd:main" }

[project.optional-dependencies]
gbdc = ["gbdc>=0.4.0"]
interactive = ["ipython"]

[tool.setuptools]
include-package-data = false
py-modules = ["gbd"]
packages = ["gbd_core", "gbd_init", "gbd_server"]

[tool.setuptools.package-data]
gbd_core = [
	"default_config.toml",
]
gbd_server = [
	"templates/*.html",
	"static/*.css",
	"static/*.js",
	"static/img/*.png",
	"static/img/*.jpg",
]

[tool.pytest.ini_options]
# Put the repository root on sys.path so the `tests` package (tests/util.py) imports.
pythonpath = ["."]
testpaths = ["tests"]
